kurban-waiting-room/04-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kurban-ratelimit
spec:
  rateLimit:
    average: 3
    burst: 1
