kurban-waiting-room/01-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-kurban
  labels:
    app: redis-kurban
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-kurban
  template:
    metadata:
      labels:
        app: redis-kurban
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-kurban-svc
spec:
  selector:
    app: redis-kurban
  ports:
  - port: 6379
    targetPort: 6379
